# c_project

./: ReadMe.md
cPrimerPlus6/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.MD  audio_tool  cmake_install.cmake  main.c
cPrimerPlus6/test/: test1.h
c_test_clion/: CMakeLists.txt  ReadMe.MD  a.out  main.c  test1.c  test1.h  test2.c  testArr.c  testArray.c  testArray2.c  testIso646.c  testString.c  testString.h  testStructure1.c  testStructure1.h  testThirdLib_Sort.c  threadTest.c
c_test_clion/libsort/: test_libsort.c
c_test_eclipse/: .cproject  .project
c_test_eclipse/Debug/: makefile  testCpro
c_test_eclipse/src/: main.c
c_test_xcode/c_test_xcode/: main.c
c_test_xcode/c_test_xcode.xcodeproj/: project.pbxproj
c_test_xcode/c_test_xcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
c_test_xcode/c_test_xcode.xcodeproj/project.xcworkspace/xcuserdata/kevin.xcuserdatad/: UserInterfaceState.xcuserstate
c_test_xcode/c_test_xcode.xcodeproj/xcuserdata/kevin.xcuserdatad/xcschemes/: xcschememanagement.plist
